# Smart-Platform-System-for-Lithium-Battery-Production

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/: CODEOWNERS  pull_request_template.md
config/: README.md  logging.yaml  playbooks.yaml
data/: golden_cases.json
deploy/: README.md  docker-compose.override.yml.example  docker-compose.platform.yml
docs/: 260630_A2A协议.md  260630_Agent目录.md  260630_Harness与MCP.md  (+15 more)
services/a2a_server/rca-agent/: .env.example  .gitignore  README.md  pyproject.toml
services/a2a_server/rca-agent/agent/: llm.py  state.py
services/a2a_server/rca-agent/agent/agents/: __init__.py  base.py  executor.py  planner.py  reflector.py  reporter.py
services/a2a_server/rca-agent/agent/graphs/: __init__.py  quality_analysis.py
services/a2a_server/rca-agent/agent/prompts/: planner_system.md  reflector_system.md  reporter_system.md
services/a2a_server/rca-agent/agent/tools/: allowlist.py  bootstrap.py  mcp_client.py  registry.py
services/a2a_server/rca-agent/api/: a2a_hitl.py  auth.py  handlers.py  main.py  schemas.py  task_store.py  tracing.py
services/a2a_server/rca-agent/config/: settings.py
services/a2a_server/rca-agent/harness/: README.md  checkpoint.py
services/a2a_server/rca-agent/harness/context/: __init__.py  memory_harness.py
services/a2a_server/rca-agent/harness/eval/: __init__.py  runner.py
services/a2a_server/rca-agent/harness/hitl/: __init__.py  broker.py  resume.py
services/a2a_server/rca-agent/harness/memory/: __init__.py  in_memory.py  long_term.py  short_term.py  working.py
services/a2a_server/rca-agent/harness/resilience/: __init__.py  circuit_breaker.py
services/a2a_server/rca-agent/harness/validation/: __init__.py  fmea_validator.py
services/a2a_server/rca-agent/knowledge/: __init__.py  fmea_csv.py  fmea_neo4j.py  fmea_registry.py  fmea_source.csv  fmea_tree.py  golden_cases.yaml
services/a2a_server/rca-agent/scripts/: export_fmea_csv.py  import_fmea_to_neo4j.py  run_analysis.py  run_eval.py  run_local.ps1
services/a2a_server/rca-agent/tests/: conftest.py  test_a2a_contract.py  test_context.py  test_fmea_csv.py  test_fmea_reflection.py  test_hitl_resume.py  test_memory_compress.py  test_parallel_execution.py  test_permission.py  test_resilience.py  test_working_round.py
(+121 files in other folders)
